# findContours

./: .gitignore  CMakeLists.txt  Map_Generator.cpp  README.md  main.cpp
data/: artificial.txt  poly.txt  triangle.txt
include/: FindContours.h
src/: FindContours.cpp
